src/recognizer/C1Parser.cpp

// Generated from /home/chivier/compiler/c1recognizer/grammar/C1Parser.g4 by ANTLR 4.7.2

#include "C1ParserListener.h"
#include "C1ParserVisitor.h"

#include "C1Parser.h"

using namespace antlrcpp;
using namespace antlr4;

C1Parser::C1Parser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

C1Parser::~C1Parser() { delete _interpreter; }

std::string C1Parser::getGrammarFileName() const { return "C1Parser.g4"; }

const std::vector<std::string> &C1Parser::getRuleNames() const { return _ruleNames; }

dfa::Vocabulary &C1Parser::getVocabulary() const { return _vocabulary; }

//----------------- CompilationUnitContext ------------------------------------------------------------------

C1Parser::CompilationUnitContext::CompilationUnitContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<C1Parser::StartContext *> C1Parser::CompilationUnitContext::start() {
  return getRuleContexts<C1Parser::StartContext>();
}

C1Parser::StartContext *C1Parser::CompilationUnitContext::start(size_t i) {
  return getRuleContext<C1Parser::StartContext>(i);
}

size_t C1Parser::CompilationUnitContext::getRuleIndex() const { return C1Parser::RuleCompilationUnit; }

void C1Parser::CompilationUnitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C1ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompilationUnit(this);
}

void C1Parser::CompilationUnitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C1ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompilationUnit(this);
}

antlrcpp::Any C1Parser::CompilationUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C1ParserVisitor *>(visitor))
    return parserVisitor->visitCompilationUnit(this);
  else
    return visitor->visitChildren(this);
}

C1Parser::CompilationUnitContext *C1Parser::compilationUnit() {
  CompilationUnitContext *_localctx = _tracker.createInstance<CompilationUnitContext>(_ctx, getState());
  enterRule(_localctx, 0, C1Parser::RuleCompilationUnit);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63);
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(62);
      start();
      setState(65);
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~0x3fULL) == 0) &&
              ((1ULL << _la) & ((1ULL << C1Parser::Const) | (1ULL << C1Parser::Int) | (1ULL << C1Parser::Void))) != 0));

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StartContext ------------------------------------------------------------------

C1Parser::StartContext::StartContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

C1Parser::DeclContext *C1Parser::StartContext::decl() { return getRuleContext<C1Parser::DeclContext>(0); }

C1Parser::FuncdefContext *C1Parser::StartContext::funcdef() { return getRuleContext<C1Parser::FuncdefContext>(0); }

size_t C1Parser::StartContext::getRuleIndex() const { return C1Parser::RuleStart; }

void C1Parser::StartContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C1ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStart(this);
}

void C1Parser::StartContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C1ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStart(this);
}

antlrcpp::Any C1Parser::StartContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C1ParserVisitor *>(visitor))
    return parserVisitor->visitStart(this);
  else
    return visitor->visitChildren(this);
}

C1Parser::StartContext *C1Parser::start() {
  StartContext *_localctx = _tracker.createInstance<StartContext>(_ctx, getState());
  enterRule(_localctx, 2, C1Parser::RuleStart);

  auto onExit = finally([=] { exitRule(); });
  try {
    setState(69);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(67);
      decl();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(68);
      funcdef();
      break;
    }
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

C1Parser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

C1Parser::ConstdeclContext *C1Parser::DeclContext::constdecl() { return getRuleContext<C1Parser::ConstdeclContext>(0); }

C1Parser::VardeclContext *C1Parser::DeclContext::vardecl() { return getRuleContext<C1Parser::VardeclContext>(0); }

size_t C1Parser::DeclContext::getRuleIndex() const { return C1Parser::RuleDecl; }

void C1Parser::DeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C1ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDecl(this);
}

void C1Parser::DeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C1ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDecl(this);
}

antlrcpp::Any C1Parser::DeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C1ParserVisitor *>(visitor))
    return parserVisitor->visitDecl(this);
  else
    return visitor->visitChildren(this);
}

C1Parser::DeclContext *C1Parser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 4, C1Parser::RuleDecl);

  auto onExit = finally([=] { exitRule(); });
  try {
    setState(73);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
    case C1Parser::Const: {
      enterOuterAlt(_localctx, 1);
      setState(71);
      constdecl();
      break;
    }

    case C1Parser::Int: {
      enterOuterAlt(_localctx, 2);
      setState(72);
      vardecl();
      break;
    }

    default:
      throw NoViableAltException(this);
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstdeclContext ------------------------------------------------------------------

C1Parser::ConstdeclContext::ConstdeclContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *C1Parser::ConstdeclContext::Const() { return getToken(C1Parser::Const, 0); }

tree::TerminalNode *C1Parser::ConstdeclContext::Int() { return getToken(C1Parser::Int, 0); }

std::vector<C1Parser::ConstdefContext *> C1Parser::ConstdeclContext::constdef() {
  return getRuleContexts<C1Parser::ConstdefContext>();
}

C1Parser::ConstdefContext *C1Parser::ConstdeclContext::constdef(size_t i) {
  return getRuleContext<C1Parser::ConstdefContext>(i);
}

tree::TerminalNode *C1Parser::ConstdeclContext::SemiColon() { return getToken(C1Parser::SemiColon, 0); }

std::vector<tree::TerminalNode *> C1Parser::ConstdeclContext::Comma() { return getTokens(C1Parser::Comma); }

tree::TerminalNode *C1Parser::ConstdeclContext::Comma(size_t i) { return getToken(C1Parser::Comma, i); }

size_t C1Parser::ConstdeclContext::getRuleIndex() const { return C1Parser::RuleConstdecl; }

void C1Parser::ConstdeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C1ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstdecl(this);
}

void C1Parser::ConstdeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C1ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstdecl(this);
}

antlrcpp::Any C1Parser::ConstdeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C1ParserVisitor *>(visitor))
    return parserVisitor->visitConstdecl(this);
  else
    return visitor->visitChildren(this);
}

C1Parser::ConstdeclContext *C1Parser::constdecl() {
  ConstdeclContext *_localctx = _tracker.createInstance<ConstdeclContext>(_ctx, getState());
  enterRule(_localctx, 6, C1Parser::RuleConstdecl);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(75);
    match(C1Parser::Const);
    setState(76);
    match(C1Parser::Int);
    setState(77);
    constdef();
    setState(82);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == C1Parser::Comma) {
      setState(78);
      match(C1Parser::Comma);
      setState(79);
      constdef();
      setState(84);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(85);
    match(C1Parser::SemiColon);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstdefContext ------------------------------------------------------------------

C1Parser::ConstdefContext::ConstdefContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *C1Parser::ConstdefContext::Identifier() { return getToken(C1Parser::Identifier, 0); }

tree::TerminalNode *C1Parser::ConstdefContext::Assign() { return getToken(C1Parser::Assign, 0); }

C1Parser::ConstinitvalContext *C1Parser::ConstdefContext::constinitval() {
  return getRuleContext<C1Parser::ConstinitvalContext>(0);
}

std::vector<tree::TerminalNode *> C1Parser::ConstdefContext::LeftBracket() { return getTokens(C1Parser::LeftBracket); }

tree::TerminalNode *C1Parser::ConstdefContext::LeftBracket(size_t i) { return getToken(C1Parser::LeftBracket, i); }

std::vector<C1Parser::ConstexpContext *> C1Parser::ConstdefContext::constexp() {
  return getRuleContexts<C1Parser::ConstexpContext>();
}

C1Parser::ConstexpContext *C1Parser::ConstdefContext::constexp(size_t i) {
  return getRuleContext<C1Parser::ConstexpContext>(i);
}

std::vector<tree::TerminalNode *> C1Parser::ConstdefContext::RightBracket() {
  return getTokens(C1Parser::RightBracket);
}

tree::TerminalNode *C1Parser::ConstdefContext::RightBracket(size_t i) { return getToken(C1Parser::RightBracket, i); }

size_t C1Parser::ConstdefContext::getRuleIndex() const { return C1Parser::RuleConstdef; }

void C1Parser::ConstdefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C1ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstdef(this);
}

void C1Parser::ConstdefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C1ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstdef(this);
}

antlrcpp::Any C1Parser::ConstdefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C1ParserVisitor *>(visitor))
    return parserVisitor->visitConstdef(this);
  else
    return visitor->visitChildren(this);
}

C1Parser::ConstdefContext *C1Parser::constdef() {
  ConstdefContext *_localctx = _tracker.createInstance<ConstdefContext>(_ctx, getState());
  enterRule(_localctx, 8, C1Parser::RuleConstdef);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    match(C1Parser::Identifier);
    setState(94);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == C1Parser::LeftBracket) {
      setState(88);
      match(C1Parser::LeftBracket);
      setState(89);
      constexp();
      setState(90);
      match(C1Parser::RightBracket);
      setState(96);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(97);
    match(C1Parser::Assign);
    setState(98);
    constinitval();

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstinitvalContext ------------------------------------------------------------------

C1Parser::ConstinitvalContext::ConstinitvalContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

C1Parser::ConstexpContext *C1Parser::ConstinitvalContext::constexp() {
  return getRuleContext<C1Parser::ConstexpContext>(0);
}

tree::TerminalNode *C1Parser::ConstinitvalContext::LeftBrace() { return getToken(C1Parser::LeftBrace, 0); }

tree::TerminalNode *C1Parser::ConstinitvalContext::RightBrace() { return getToken(C1Parser::RightBrace, 0); }

std::vector<C1Parser::ConstinitvalContext *> C1Parser::ConstinitvalContext::constinitval() {
  return getRuleContexts<C1Parser::ConstinitvalContext>();
}

C1Parser::ConstinitvalContext *C1Parser::ConstinitvalContext::constinitval(size_t i) {
  return getRuleContext<C1Parser::ConstinitvalContext>(i);
}

std::vector<tree::TerminalNode *> C1Parser::ConstinitvalContext::Comma() { return getTokens(C1Parser::Comma); }

tree::TerminalNode *C1Parser::ConstinitvalContext::Comma(size_t i) { return getToken(C1Parser::Comma, i); }

size_t C1Parser::ConstinitvalContext::getRuleIndex() const { return C1Parser::RuleConstinitval; }

void C1Parser::ConstinitvalContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C1ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstinitval(this);
}

void C1Parser::ConstinitvalContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C1ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstinitval(this);
}

antlrcpp::Any C1Parser::ConstinitvalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C1ParserVisitor *>(visitor))
    return parserVisitor->visitConstinitval(this);
  else
    return visitor->visitChildren(this);
}

C1Parser::ConstinitvalContext *C1Parser::constinitval() {
  ConstinitvalContext *_localctx = _tracker.createInstance<ConstinitvalContext>(_ctx, getState());
  enterRule(_localctx, 10, C1Parser::RuleConstinitval);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    setState(113);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
    case C1Parser::LeftParen:
    case C1Parser::Negative:
    case C1Parser::Plus:
    case C1Parser::Minus:
    case C1Parser::Identifier:
    case C1Parser::IntConst: {
      enterOuterAlt(_localctx, 1);
      setState(100);
      constexp();
      break;
    }

    case C1Parser::LeftBrace: {
      enterOuterAlt(_localctx, 2);
      setState(101);
      match(C1Parser::LeftBrace);
      setState(110);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~0x3fULL) == 0) &&
           ((1ULL << _la) & ((1ULL << C1Parser::LeftBrace) | (1ULL << C1Parser::LeftParen) |
                             (1ULL << C1Parser::Negative) | (1ULL << C1Parser::Plus) | (1ULL << C1Parser::Minus) |
                             (1ULL << C1Parser::Identifier) | (1ULL << C1Parser::IntConst))) != 0)) {
        setState(102);
        constinitval();
        setState(107);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == C1Parser::Comma) {
          setState(103);
          match(C1Parser::Comma);
          setState(104);
          constinitval();
          setState(109);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
      }
      setState(112);
      match(C1Parser::RightBrace);
      break;
    }

    default:
      throw NoViableAltException(this);
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstexpContext ------------------------------------------------------------------

C1Parser::ConstexpContext::ConstexpContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

C1Parser::AddexpContext *C1Parser::ConstexpContext::addexp() { return getRuleContext<C1Parser::AddexpContext>(0); }

size_t C1Parser::ConstexpContext::getRuleIndex() const { return C1Parser::RuleConstexp; }

void C1Parser::ConstexpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C1ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstexp(this);
}

void C1Parser::ConstexpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C1ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstexp(this);
}

antlrcpp::Any C1Parser::ConstexpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C1ParserVisitor *>(visitor))
    return parserVisitor->visitConstexp(this);
  else
    return visitor->visitChildren(this);
}

C1Parser::ConstexpContext *C1Parser::constexp() {
  ConstexpContext *_localctx = _tracker.createInstance<ConstexpContext>(_ctx, getState());
  enterRule(_localctx, 12, C1Parser::RuleConstexp);

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(115);
    addexp(0);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VardeclContext ------------------------------------------------------------------

C1Parser::VardeclContext::VardeclContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *C1Parser::VardeclContext::Int() { return getToken(C1Parser::Int, 0); }

std::vector<C1Parser::VardefContext *> C1Parser::VardeclContext::vardef() {
  return getRuleContexts<C1Parser::VardefContext>();
}

C1Parser::VardefContext *C1Parser::VardeclContext::vardef(size_t i) {
  return getRuleContext<C1Parser::VardefContext>(i);
}

tree::TerminalNode *C1Parser::VardeclContext::SemiColon() { return getToken(C1Parser::SemiColon, 0); }

std::vector<tree::TerminalNode *> C1Parser::VardeclContext::Comma() { return getTokens(C1Parser::Comma); }

tree::TerminalNode *C1Parser::VardeclContext::Comma(size_t i) { return getToken(C1Parser::Comma, i); }

size_t C1Parser::VardeclContext::getRuleIndex() const { return C1Parser::RuleVardecl; }

void C1Parser::VardeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C1ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVardecl(this);
}

void C1Parser::VardeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C1ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVardecl(this);
}

antlrcpp::Any C1Parser::VardeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C1ParserVisitor *>(visitor))
    return parserVisitor->visitVardecl(this);
  else
    return visitor->visitChildren(this);
}

C1Parser::VardeclContext *C1Parser::vardecl() {
  VardeclContext *_localctx = _tracker.createInstance<VardeclContext>(_ctx, getState());
  enterRule(_localctx, 14, C1Parser::RuleVardecl);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    match(C1Parser::Int);
    setState(118);
    vardef();
    setState(123);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == C1Parser::Comma) {
      setState(119);
      match(C1Parser::Comma);
      setState(120);
      vardef();
      setState(125);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(126);
    match(C1Parser::SemiColon);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VardefContext ------------------------------------------------------------------

C1Parser::VardefContext::VardefContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *C1Parser::VardefContext::Identifier() { return getToken(C1Parser::Identifier, 0); }

std::vector<tree::TerminalNode *> C1Parser::VardefContext::LeftBracket() { return getTokens(C1Parser::LeftBracket); }

tree::TerminalNode *C1Parser::VardefContext::LeftBracket(size_t i) { return getToken(C1Parser::LeftBracket, i); }

std::vector<C1Parser::ConstexpContext *> C1Parser::VardefContext::constexp() {
  return getRuleContexts<C1Parser::ConstexpContext>();
}

C1Parser::ConstexpContext *C1Parser::VardefContext::constexp(size_t i) {
  return getRuleContext<C1Parser::ConstexpContext>(i);
}

std::vector<tree::TerminalNode *> C1Parser::VardefContext::RightBracket() { return getTokens(C1Parser::RightBracket); }

tree::TerminalNode *C1Parser::VardefContext::RightBracket(size_t i) { return getToken(C1Parser::RightBracket, i); }

tree::TerminalNode *C1Parser::VardefContext::Assign() { return getToken(C1Parser::Assign, 0); }

C1Parser::InitvalContext *C1Parser::VardefContext::initval() { return getRuleContext<C1Parser::InitvalContext>(0); }

size_t C1Parser::VardefContext::getRuleIndex() const { return C1Parser::RuleVardef; }

void C1Parser::VardefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C1ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVardef(this);
}

void C1Parser::VardefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C1ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVardef(this);
}

antlrcpp::Any C1Parser::VardefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C1ParserVisitor *>(visitor))
    return parserVisitor->visitVardef(this);
  else
    return visitor->visitChildren(this);
}

C1Parser::VardefContext *C1Parser::vardef() {
  VardefContext *_localctx = _tracker.createInstance<VardefContext>(_ctx, getState());
  enterRule(_localctx, 16, C1Parser::RuleVardef);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    setState(150);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(128);
      match(C1Parser::Identifier);
      setState(135);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == C1Parser::LeftBracket) {
        setState(129);
        match(C1Parser::LeftBracket);
        setState(130);
        constexp();
        setState(131);
        match(C1Parser::RightBracket);
        setState(137);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(138);
      match(C1Parser::Identifier);
      setState(145);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == C1Parser::LeftBracket) {
        setState(139);
        match(C1Parser::LeftBracket);
        setState(140);
        constexp();
        setState(141);
        match(C1Parser::RightBracket);
        setState(147);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(148);
      match(C1Parser::Assign);
      setState(149);
      initval();
      break;
    }
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InitvalContext ------------------------------------------------------------------

C1Parser::InitvalContext::InitvalContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

C1Parser::ExpContext *C1Parser::InitvalContext::exp() { return getRuleContext<C1Parser::ExpContext>(0); }

tree::TerminalNode *C1Parser::InitvalContext::LeftBrace() { return getToken(C1Parser::LeftBrace, 0); }

tree::TerminalNode *C1Parser::InitvalContext::RightBrace() { return getToken(C1Parser::RightBrace, 0); }

std::vector<C1Parser::InitvalContext *> C1Parser::InitvalContext::initval() {
  return getRuleContexts<C1Parser::InitvalContext>();
}

C1Parser::InitvalContext *C1Parser::InitvalContext::initval(size_t i) {
  return getRuleContext<C1Parser::InitvalContext>(i);
}

std::vector<tree::TerminalNode *> C1Parser::InitvalContext::Comma() { return getTokens(C1Parser::Comma); }

tree::TerminalNode *C1Parser::InitvalContext::Comma(size_t i) { return getToken(C1Parser::Comma, i); }

size_t C1Parser::InitvalContext::getRuleIndex() const { return C1Parser::RuleInitval; }

void C1Parser::InitvalContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C1ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInitval(this);
}

void C1Parser::InitvalContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C1ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInitval(this);
}

antlrcpp::Any C1Parser::InitvalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<C1ParserVisitor *>(visitor))
    return parserVisitor->visitInitval(this);
  else
    return visitor->visitChildren(this);
}

C1Parser::InitvalContext *C1Parser::initval() {
  InitvalContext *_localctx = _tracker.createInstance<InitvalContext>(_ctx, getState());
  enterRule(_localctx, 18, C1Parser::RuleInitval);
  size_t _la = 0;

  auto onExit = finally([=] { exitRule(); });
  try {
    setState(165);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
    case C1Parser::LeftParen:
    case C1Parser::Negative:
    case C1Parser::Plus:
    case C1Parser::Minus:
    case C1Parser::Identifier:
    case C1Parser::IntConst: {
      enterOuterAlt(_localctx, 1);
      setState(152);
      exp();
      break;
    }

    case C1Parser::LeftBrace: {
      enterOuterAlt(_localctx, 2);
      setState(153);
      match(C1Parser::LeftBrace);
      setState(162);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~0x3fULL) == 0) &&
           ((1ULL << _la) & ((1ULL << C1Parser::LeftBrace) | (1ULL << C1Parser::LeftParen) |
                             (1ULL << C1Parser::Negative) | (1ULL << C1Parser::Plus) | (1ULL << C1Parser::Minus) |
                             (1ULL << C1Parser::Identifier) | (1ULL << C1Parser::IntConst))) != 0)) {
        setState(154);
        initval();
        setState(159);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == C1Parser::Comma) {
          setState(155);
          match(C1Parser::Comma);
          setState(156);
          initval();
          setState(161);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
      }
      setState(164);
      match(C1Parser::RightBrace);
      break;
    }

    default:
      throw NoViableAltException(this);
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncdefContext ------------------------------------------------------------------

C1Parser::FuncdefContext::FuncdefContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

C1Parser::FunctypeContext *C1Parser::FuncdefContext::functype() { return getRuleContext<C1Parser::FunctypeContext>(0); }

tree::TerminalNode *C1Parser::FuncdefContext::Identifier() { return getToken(C1Parser::Identifier, 0); }

tree::TerminalNode *C1Parser::FuncdefContext::LeftParen() { return getToken(C1Parser::LeftParen, 0); }

tree::TerminalNode *C1Parser::FuncdefContext::RightParen() { return getToken(C1Parser::RightParen, 0); }

C1Parser::BlockContext *C1Parser::FuncdefContext::block() { return getRuleContext<C1Parser::BlockContext>(0); }

C1Parser::FuncfparamsContext *C1Parser::FuncdefContext::funcfparams() {
  return getRuleContext<C1Parser::FuncfparamsContext>(0);
}

size_t C1Parser::FuncdefContext::getRuleIndex() const { return C1Parser::RuleFuncdef; }

void C1Parser::FuncdefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C1ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFuncdef(this);
}

void C1Parser::FuncdefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C1ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFuncdef(this);
}
